Fri May  1 22:45:55 1998  Owen Taylor  <otaylor@gtk.org>

        * gtk/gtkscrolledwindow.c (gtk_scrolled_window_size_allocate):
        Always show the scrollbars when the policy is
        GTK_POLICY_ALWAYS...

Sat May  2 20:19:03 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkadjustment.c (gtk_adjustment_set_value): only emit
 	"value_changed" if we really passed a new value.
	(gtk_adjustment_changed): new function to emit the "changed" signal.
	(gtk_adjustment_set_value): new function to emit the "value_changed"
	signal.

Fri May  1 12:28:35 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtkcombo.c: Further changes to the way the window
	is popped up so that it will be compatible with 
	auto-scrolling in the future.

Fri May  1 20:25:29 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkcombo.c (gtk_combo_popup_list): do not just return if
	the combo-list is empty since that will cause the combo to operate
	on a non existing GtkList window.
	(gtk_combo_get_pos): provide the combo list with a usfull default
 	height if empty.
	(gtk_combo_popup_button_press): grab the focus.
	(gtk_combo_activate): grab the focus.

Fri May  1 12:06:43 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtkwindow.[ch] (gtk_widget_reset_rc_styles): New
	function to reset the RC styles for a heirarchy

        Clear the window background if necessary in
	gtk_window_style_set.

	* gtk/gtkrc.[ch]: New function gtk_rc_reparse_all() which
	rereads all previously read RC files.

	* gdk/gdkwindow.c gdk/gdk.h: New function gdk_window_get_toplevels().
	(Should it just be called gdk_get_toplevels?)

	* gtk/testgtk.c: New test to reload RC files.

Fri May  1 13:57:36 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkclist.h:
	* gtk/gtkclist.c: prefixed all clist flags with GTK_ to avoid name
 	clashes. redefined GTK_CLIST_SET_FLAGS and GTK_CLIST_UNSET_FLAGS as
	GTK_CLIST_SET_FLAG and GTK_CLIST_UNSET_FLAG to automatically add
	the GTK_ prefix (this solution involved less changes in the