@@ -1,3 +1,11 @@
+Sat May  2 22:33:45 1998  Tim Janik  <timj@gtk.org>
+
+	* gtk/gtksignal.c: added new functions to operate on intermediate
+ 	function pointers. implemented incremental blocking.
+	(gtk_signal_disconnect_by_func): new function.
+	(gtk_signal_handler_block_by_func): new function.
+	(gtk_signal_handler_unblock_by_func): new function
+
 Fri May  1 22:45:55 1998  Owen Taylor  <otaylor@gtk.org>
 
         * gtk/gtkscrolledwindow.c (gtk_scrolled_window_size_allocate):
